syntax = "proto2";

package binary.wz.im.common.proto;
option java_outer_classname = "Chat";

message ChatMsg {
    required int32 version = 1;
    //协议版本号。第一版本：1，以此类推。

    required string id = 2;
    //消息标识

    optional int64 seq = 3;
    //消息序号

    required DestType destType = 4;
    //接收者类型。

    required string fromId = 5;
    //发送者userId

    required string destId = 6;
    //接收者userId

    required int64 createTime = 7;
    //发送时间

    required MsgType msgType = 8;
    //消息类型

    required bytes msgBody = 9;
    //消息体

    optional string addition = 32;

    enum DestType {
        SINGLE = 0;
        GROUP = 1;
    }

    enum MsgType {
        TEXT = 0;
        FILE = 1;
    }
}

message TextBody {
    required string text = 1;
    //文字内容
}

message FileBody {
    required string fileId = 1;
    //媒体文件上传到得到的KEY，用于生成下载URL

    required int32 media_crc32 = 2;
    //文件的 CRC32 校验码

    required int32 fSize = 3;
    //文件大小（字节数）

    required string fName = 4;
    //文件名字
}
