syntax = "proto2";

package binary.wz.im.common.proto;
option java_outer_classname = "Notify";

message NotifyMsg {
    required int32 version = 1;
    //协议版本号

    required string id = 2;
    //消息标识

    optional int64 seq = 3;
    //消息序号

    required DestType destType = 4;
    //接收者类型

    required string fromId = 5;
    //发送者userId

    required string destId = 6;
    //接收者userId

    required int64 createTime = 7;
    //发送时间

    required MsgType msgType = 8;
    //消息类型

    required string msgBody = 9;
    //消息体

    enum DestType {
        SINGLE = 0;
        GROUP = 1;
    }

    enum MsgType {
        DELIVERED = 0;
        READ = 1;
    }
}
